<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeekViewActivity"
    android:background="@color/greypink"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top Toolbar -->

        <!-- Content Layout Below Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="3dp"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/Theme.Period1">

            <!-- Left Icon for Menu -->
            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingStart="10dp"
                android:src="@drawable/ic_user" />

            <ImageView
                android:id="@+id/text_logo"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo_text" />

            <!-- Right Icon for Notifications -->
            <ImageView
                android:id="@+id/notifications_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_notifications" />

            <!-- Right Icon for Calendar -->
            <ImageView
                android:id="@+id/calendar_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_calendar" /> <!-- Change visibility to visible if needed -->

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:orientation="vertical">

            <!-- Week View -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp">

                <!-- Back Button -->
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnBack"
                    android:textColor="@color/white"
                    android:background="@null"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:onClick="previousWeekAction"
                    android:textSize="20sp"/>

                <!-- Month and Year TextView -->
                <TextView
                    android:id="@+id/monthYearTV"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="Feb 2021"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

                <!-- Forward Button -->
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnForward"
                    android:textColor="@color/white"
                    android:background="@null"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:onClick="nextWeekAction"
                    android:textSize="20sp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Days of the Week -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <!-- Sunday -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="SUN"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:textSize="16sp"/>

                    <!-- Monday -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="MON"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:textSize="16sp"/>

                    <!-- Tuesday -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TUE"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:textSize="16sp"/>

                    <!-- Wednesday -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="WED"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:textSize="16sp"/>

                    <!-- Thursday -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="THUR"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:textSize="16sp"/>

                    <!-- Friday -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="FRI"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:textSize="16sp"/>

                    <!-- Saturday -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="SAT"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:textSize="16sp"/>

                </LinearLayout>
                <!-- RecyclerView -->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/calendarRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"

                android:gravity="center"
                android:layout_height="wrap_content">
                <!-- Circle with Two TextViews and Button -->
                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="300dp"
                    app:cardBackgroundColor="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <!-- First TextView -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/period_status"
                            android:textFontWeight="4"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <!-- Second TextView -->
                        <TextView
                            android:id="@+id/upcomingDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/perioddays_text"
                            android:textColor="@android:color/black"
                            android:textFontWeight="4"
                            android:textSize="20sp" />

                        <!-- Button -->
                        <Button
                            android:id="@+id/btnLogPeriod"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:background="@drawable/rounded_button"
                            android:text="@string/btnLogPeriod"
                            android:textColor="@android:color/white" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Make Note"
                android:textColor="@color/blue"
                android:background="@null"
                android:textStyle="bold"
                android:onClick="newEventAction"
                android:layout_gravity="center"
                android:textSize="20sp"/>

            <ListView
                android:id="@+id/eventListView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
            <!-- Three Cards Side by Side -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <!-- First Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:padding="16dp">

                        <!-- First element in the card -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/today_title"
                            android:textSize="10sp" />

                        <!-- Second element in the card -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="TextView 2"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <!-- Third Card -->
                <androidx.cardview.widget.CardView
                    android:background="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:padding="16dp">

                        <!-- First element in the card -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="TextView 1"
                            android:textSize="10sp"/>

                        <!-- Second element in the card -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="TextView 2"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <androidx.cardview.widget.CardView
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:padding="16dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
                        <!-- First element in the card -->

    <ImageView
        android:id="@+id/temp_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_temp" />
                        <TextView
                            android:id="@+id/temperatureTextView"
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"

                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:text="TextView 1"
                            android:textSize="16sp"/>
</LinearLayout>
                        <!-- Second element in the card -->
                        <TextView
                            android:id="@+id/tipsTextView"
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="TextView 2"
                            android:padding="10dp"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
        </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>














